--- a/airqualitypractice.ipynb
+++ b/airqualitypractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "id": "e189c985",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "6c413eaa",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "57                                  50587  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,12 +512,12 @@
     "filtered_df = remove_outliers_iqr(merged_df, 'Per Capita Income (Dollars) from 2023')\n",
     "filtered_df = remove_outliers_iqr(filtered_df, 'Air Pollution (PM2.5)')\n",
     "\n",
-    "filtered_df\n"
+    "filtered_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 106,
    "id": "0ac6779d",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "01200059",
    "metadata": {},
    "outputs": [
@@ -580,6 +580,25 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "0df67d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation coefficient (r): -0.30125260566304085\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = filtered_df['Per Capita Income (Dollars) from 2023'].corr(filtered_df['Air Pollution (PM2.5)'])\n",
+    "print(f\"Correlation coefficient (r): {r}\")"
    ]
   }
  ],
