--- a/airqualitypractice.ipynb
+++ b/airqualitypractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "e189c985",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,12 @@
     "from pathlib import Path\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "sns.set_theme(style=\"whitegrid\")\n",
-    "DATA_DIR = Path('../../') / 'COSMOS/Lecture 3' "
+    "sns.set_theme(style=\"whitegrid\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6c413eaa",
    "metadata": {},
    "outputs": [
@@ -485,16 +484,16 @@
        "57                                  50587  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_path = DATA_DIR / 'ca_air_pollution_2023.csv'\n",
-    "air_quality = pd.read_csv(csv_path)\n",
+    "path = \"ca_air_pollution_2023.csv\"\n",
+    "air_quality = pd.read_csv(path)\n",
     "\n",
-    "csv_path = DATA_DIR / 'ca_income_2023.csv'\n",
+    "csv_path = \"ca_income_2023.csv\"\n",
     "income_data = pd.read_csv(csv_path)\n",
     "\n",
     "merged_df = pd.merge(air_quality, income_data)\n",
@@ -599,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
